--- a/imagehash.cabal
+++ b/imagehash.cabal
@@ -10,6 +10,10 @@ cabal-version:       >=1.8
 
 executable imagehash
   main-is: imagehash.hs
-  -- other-modules:       
   build-depends: base, process, bytestring, base16-bytestring, directory, filepath, stm, stm-chans, cryptohash
+  ghc-options: -threaded
+
+executable updateimagehash
+  main-is: updateimagehash.hs
+  build-depends: base
   ghc-options: -threaded
