imagehash: add sqlite dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,13 @@ edition = "2018"
 [dependencies]
 walkdir = "2"
 tokio = { version = "0.2", features = ["full"] }
-crossbeam = ""
-crossbeam-channel = ""
-rayon = ""
-futures = ""
-anyhow = ""
-sha-1 = ""
-num_cpus = ""
-hex = ""
+crossbeam = "*"
+crossbeam-channel = "*"
+rayon = "*"
+futures = "*"
+anyhow = "*"
+sha-1 = "*"
+num_cpus = "*"
+hex = "*"
+sqlite = "*"
+home = "*"
