perceptual hash hacking

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "imagehash"
 version = "0.1.0"
 authors = ["Chad Austin <chad@chadaustin.me>"]
 edition = "2018"
+build = "src/build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[build-dependencies]
+vcpkg = "*"
 
 [dependencies]
 walkdir = "2"
@@ -21,3 +25,7 @@ sqlite = "*"
 structopt = "*"
 blake3 = "*"
 directories = "*"
+
+libheif-rs = "*"
+blockhash = "*"
+img_hash = "*"
