imagehash: switch to rusqlite and add some basic sqlite scaffolding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ anyhow = "*"
 sha-1 = "*"
 num_cpus = "*"
 hex = "*"
-sqlite = "*"
+rusqlite = "*"
 structopt = "*"
 blake3 = "*"
 directories = "*"
