--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ build = "src/build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release-with-debug]
+inherits = "release"
+debug = true
+
 [build-dependencies]
 vcpkg = "*"
 
