--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,14 @@ authors = ["Chad Austin <chad@chadaustin.me>"]
 edition = "2018"
 build = "src/build.rs"
 
+[lib]
+name = "imagehash"
+path = "src/lib.rs"
+
+[[bin]]
+name = "imagehash"
+path = "src/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [profile.release-with-debug]
@@ -13,6 +21,13 @@ debug = true
 
 [build-dependencies]
 vcpkg = "*"
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
+
+[[bench]]
+name = "databasebench"
+harness = false
 
 [dependencies]
 anyhow = "*"
