imagehash: fix build on Windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,13 @@ path = "src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[package.metadata.vcpkg]
+git = "https://github.com/microsoft/vcpkg"
+rev = "662dbb50e63af15baa2909b7eac5b1b87e86a0aa"
+dependencies = [
+    "libheif:x64-windows",
+]
+
 [profile.release-with-debug]
 inherits = "release"
 debug = true
