--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ structopt = "*"
 tokio = { version = "1", features = ["full"] }
 walkdir = "2"
 wild = "*"
-winapi = "*"
+winapi = { version = "*", features = ["heapapi"] }
 
 [target.'cfg(windows)'.dependencies]
 rusqlite = { version = "*", features = ["bundled"] }
