--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ libheif-rs = "*"
 rayon = "*"
 self_cell = "*"
 sha-1 = "*"
+static_assertions = "*"
 structopt = "*"
 tokio = { version = "1", features = ["full"] }
 walkdir = "2"
