imagehash: break some dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,19 +42,17 @@ async-std = { version = "*", features = ["unstable"] }
 blake3 = "*"
 blockhash = "*"
 chrono = "*"
-crossbeam = "*"
 crossbeam-channel = "*"
 directories = "*"
 dunce = "*"
 futures = "*"
 hex = "*"
-img_hash = "*"
+#img_hash = "*"
 jwalk = "*"
 ntapi = "*"
 libheif-rs = "*"
 rayon = "*"
 self_cell = "*"
-sha-1 = "*"
 static_assertions = "*"
 structopt = "*"
 tokio = { version = "1", features = ["full"] }
