imagehash: implement schema migration and recreate images

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ jwalk = "*"
 ntapi = "*"
 libheif-rs = "*"
 rayon = "*"
+rusqlite_migration = "*"
 self_cell = "*"
 static_assertions = "*"
 structopt = "*"
