imagehash: keep PC awake while indexing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ chrono = "*"
 directories = "*"
 dunce = "*"
 kamadak-exif = "*"
+keepawake = "*"
 futures = "*"
 hex = "*"
 image = { version = "*", features = [] }
