--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Chad Austin <chad@chadaustin.me>"]
 edition = "2021"
 build = "build.rs"
+license = "GPL-3.0"
+license-file = "LICENSE"
+description = "Tool for detecting duplicate photos and diffing directories"
 
 [lib]
 name = "photohash"
