--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ harness = false
 [dependencies]
 anyhow = "1"
 async-std = { version = "1", features = ["unstable"] }
+batch-channel = "0.2.1"
 blake3 = "1"
 blockhash = "0"
 chrono = "0"
