--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ self_cell = "1"
 static_assertions = "1"
 structopt = "0"
 thiserror = "1"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync"] }
 turbojpeg = { version = "0", features = ["image"] }
 walkdir = "2"
 wild = "2"
