--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,5 +24,5 @@ jobs:
       - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
       - name: Install Ubuntu packages
-        run: sudo apt install -y libheif-dev nasm
+        run: sudo apt install -y libheif-dev libsqlite3-dev nasm
       - run: cargo test
