--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ futures = "0.3"
 hex = "0"
 image = { version = "0.25.2", features = [] }
 image_hasher = "2.0.0"
+indoc = "2.0.5"
 itermore = { version = "0.7.1", features = ["array_chunks"] }
 jwalk = "0.8.1"
 ntapi = "0.4.1"
