--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,10 @@ vcpkg = "0.2.15"
 
 [dev-dependencies]
 criterion = { version = "0", features = ["html_reports"] }
+digest = "0.10.7"
+md-5 = "0.10.6"
+sha1 = "0.10.6"
+sha2 = "0.10.8"
 
 [[bench]]
 name = "databasebench"
