--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,8 @@ ntapi = "0.4.1"
 rayon = "1.10.0"
 rusqlite_migration = "1.3.0"
 self_cell = "1.0.4"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
 static_assertions = "1.1.0"
