--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ clap = { version = "4.5.20", features = ["derive"] }
 digest = "0.10.7"
 directories = "5"
 dunce = "1.0.5"
+enumset = "1.1.5"
 futures = "0.3"
 hex = "0.4.3"
 image = { version = "0.25.2", features = [] }
