--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ harness = false
 anyhow = "1.0.65"
 async-std = { version = "1.12", features = ["unstable"] }
 batch-channel = "0.4.1"
-blake3 = "1"
+blake3 = { version = "1.5.5", features = ["traits-preview"] }
 blockhash = "1.0.0"
 chrono = "0.4.38"
 clap = { version = "4.5.20", features = ["derive"] }
@@ -66,6 +66,7 @@ keepawake = "0.5.1"
 libheif-rs = { version = "1.0.2", default-features = false }
 md-5 = "0.10.6"
 ntapi = "0.4.1"
+rand = "0.8.5"
 rayon = "1.10.0"
 rusqlite_migration = "1.3.0"
 self_cell = "1.0.4"
