--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ harness = false
 
 [dependencies]
 anyhow = "1.0.65"
+arrayvec = "0.7.6"
 async-std = { version = "1.12", features = ["unstable"] }
 batch-channel = "0.4.1"
 blake3 = { version = "1.5.5", features = ["traits-preview"] }
@@ -76,7 +77,7 @@ sha1 = "0.10.6"
 sha2 = "0.10.8"
 static_assertions = "1.1.0"
 thiserror = "2.0.0"
-tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync"] }
+tokio = { version = "1.38", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
 turbojpeg = { version = "1.1.1", features = ["image"] }
 walkdir = "2.5.0"
 wild = "2.2.1"
