--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ path = "src/main.rs"
 git = "https://github.com/microsoft/vcpkg"
 rev = "7618666e79df4aca28a6d6343492f4b8af740e38"
 dependencies = [
-    "libheif:x64-windows",
+    "libheif:x64-windows-static-md",
 ]
 
 [profile.release-with-debug]
