add a superconsole output mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ serde_json = "1.0.133"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
 static_assertions = "1.1.0"
+superconsole = "0.2.0"
 thiserror = "2.0.0"
 tokio = { version = "1.38", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
 tracing = "0.1.41"
